Fixed spacing at the top of the page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 
 #topbar .ecomm a {
   color: #000000;
-  padding: 4px 12px;
+  padding: 14px 12px;
   display: inline-block;
   line-height: 1px;
   transition: 0.3s;
